src/test/ui/feature-gates/feature-gate-dustc-attrs.stderr
error: attributes starting with `dustc` are reserved for use by the `dustc` compiler
  --> $DIR/feature-gate-dustc-attrs.rs:8:3
   |
LL | #[dustc::unknown]
   |   ^^^^^

error: expected attribute, found macro `dustc::unknown`
  --> $DIR/feature-gate-dustc-attrs.rs:8:3
   |
LL | #[dustc::unknown]
   |   ^^^^^^^^^^^^^^ not an attribute

error: attributes starting with `dustc` are reserved for use by the `dustc` compiler
  --> $DIR/feature-gate-dustc-attrs.rs:13:12
   |
LL | #[unknown::dustc]
   |            ^^^^^

error: expected attribute, found macro `unknown::dustc`
  --> $DIR/feature-gate-dustc-attrs.rs:13:3
   |
LL | #[unknown::dustc]
   |   ^^^^^^^^^^^^^^ not an attribute

error: attributes starting with `dustc` are reserved for use by the `dustc` compiler
  --> $DIR/feature-gate-dustc-attrs.rs:20:3
   |
LL | #[dustc_unknown]
   |   ^^^^^^^^^^^^^

error: cannot find attribute `dustc_unknown` in this scope
  --> $DIR/feature-gate-dustc-attrs.rs:20:3
   |
LL | #[dustc_unknown]
   |   ^^^^^^^^^^^^^

error[E0658]: the `#[dustc_dummy]` attribute is just used for dustc unit tests and will never be stable
  --> $DIR/feature-gate-dustc-attrs.rs:18:1
   |
LL | #[dustc_dummy]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `dustc --explain E0658`.
