src/test/ui/feature-gates/feature-gate-dustc-attrs.ds
// Test that `#[dustc_*]` attributes are gated by `dustc_attrs` feature gate.

#![feature(decl_macro)]

mod dustc { pub macro unknown() {} }
mod unknown { pub macro dustc() {} }

#[dustc::unknown]
//~^ ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler
//~| ERROR expected attribute, found macro `dustc::unknown`
fn f() {}

#[unknown::dustc]
//~^ ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler
//~| ERROR expected attribute, found macro `unknown::dustc`
fn g() {}

#[dustc_dummy]
//~^ ERROR the `#[dustc_dummy]` attribute is just used for dustc unit tests
#[dustc_unknown]
//~^ ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler
//~| ERROR cannot find attribute `dustc_unknown` in this scope
fn main() {}
